Fixed some whitespace showing when scrolling in and out

--- a/reactfirst/src/pages/Education.css
+++ b/reactfirst/src/pages/Education.css
@@ -58,7 +58,7 @@
   height: 100%;
   
 }
-.Education-footer {
+.Education-footer{
   border-style: solid;
   border-color: #00253F;
   display:flex;
@@ -69,7 +69,7 @@
   border-top-width: 0;
   border-bottom-width: 0;
   background-color: #0489A4;
-  height: 5%;
+  height: 15vh;
 }
 .Education-Footer-Statement{
   text-align: center;
