--- a/reactfirst/src/pages/HomePage.css
+++ b/reactfirst/src/pages/HomePage.css
@@ -57,7 +57,6 @@
   border-top-width: 0;
   border-bottom-width: 0;
   background-color: #0489A4;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,8 +65,6 @@
   
 }
 .HomePage-footer {
-
-  text-align: center;
   border-style: solid;
   border-color: #00253F;
   display:flex;
@@ -78,7 +75,7 @@
   border-top-width: 0;
   border-bottom-width: 0;
   background-color: #0489A4;
-  height: 2vh;
+  height: 100vh;
 }
 .HomePage-link {
   
